cmake_minimum_required(VERSION 3.9)
project(usloss)

set(CMAKE_CXX_STANDARD 11)

add_executable(usloss
        phase1/testcases/test00.c
        phase1/testcases/test01.c
        phase1/testcases/test02.c
        phase1/testcases/test03.c
        phase1/testcases/test04.c
        phase1/testcases/test05.c
        phase1/testcases/test06.c
        phase1/testcases/test07.c
        phase1/testcases/test08.c
        phase1/testcases/test09.c
        phase1/testcases/test10.c
        phase1/testcases/test11.c
        phase1/testcases/test12.c
        phase1/testcases/test13.c
        phase1/testcases/test14.c
        phase1/testcases/test15.c
        phase1/testcases/test16.c
        phase1/testcases/test17.c
        phase1/testcases/test18.c
        phase1/testcases/test19.c
        phase1/testcases/test20.c
        phase1/testcases/test21.c
        phase1/testcases/test22.c
        phase1/testcases/test23.c
        phase1/testcases/test24.c
        phase1/testcases/test25.c
        phase1/testcases/test26.c
        phase1/testcases/test27.c
        phase1/testcases/test28.c
        phase1/testcases/test29.c
        phase1/testcases/test30.c
        phase1/testcases/test31.c
        phase1/testcases/test32.c
        phase1/testcases/test33.c
        phase1/testcases/test34.c
        phase1/testcases/test35.c
        phase1/testcases/test36.c
        phase1/testResults/test00.txt
        phase1/testResults/test01.txt
        phase1/testResults/test02.txt
        phase1/testResults/test03.txt
        phase1/testResults/test04.txt
        phase1/testResults/test05.txt
        phase1/testResults/test06.txt
        phase1/testResults/test07.txt
        phase1/testResults/test08.txt
        phase1/testResults/test09.txt
        phase1/testResults/test10.txt
        phase1/testResults/test11.txt
        phase1/testResults/test12.txt
        phase1/testResults/test13.txt
        phase1/testResults/test14.txt
        phase1/testResults/test15.txt
        phase1/testResults/test16.txt
        phase1/testResults/test17.txt
        phase1/testResults/test18.txt
        phase1/testResults/test19.txt
        phase1/testResults/test20.txt
        phase1/testResults/test21.txt
        phase1/testResults/test22.txt
        phase1/testResults/test23.txt
        phase1/testResults/test24.txt
        phase1/testResults/test25.txt
        phase1/testResults/test26.txt
        phase1/testResults/test27.txt
        phase1/testResults/test28.txt
        phase1/testResults/test29.txt
        phase1/testResults/test30.txt
        phase1/testResults/test31.txt
        phase1/testResults/test32.txt
        phase1/testResults/test33.txt
        phase1/testResults/test34.txt
        phase1/testResults/test35.txt
        phase1/testResults/test36.txt
        phase1/kernel.h
        phase1/p1.c
        phase1/phase1.h
        phase1/skeleton.c
        usloss/libdisk/disk.c
        usloss/libdisk/libdisk.h
        usloss/libdisk/makedisk.c
        usloss/libuser/libuser.c
        usloss/libuser/libuser.h
        usloss/pterm/pterm.c
        usloss/src/dev_alarm.c
        usloss/src/dev_alarm.h
        usloss/src/dev_clock.c
        usloss/src/dev_clock.h
        usloss/src/dev_disk.c
        usloss/src/dev_disk.h
        usloss/src/dev_term.c
        usloss/src/dev_term.h
        usloss/src/devices.c
        usloss/src/devices.h
        usloss/src/globals.c
        usloss/src/globals.h
        usloss/src/main.c
        usloss/src/main.h
        usloss/src/mmu.c
        usloss/src/mmuInt.h
        usloss/src/project.h
        usloss/src/sig_ints.c
        usloss/src/sig_ints.h
        usloss/src/syscall.h
        usloss/src/usloss.h
        usloss/src/usyscall.h
        usloss/testcases/test00.c
        usloss/testcases/test01.c
        usloss/testcases/test02.c
        usloss/testcases/test03.c
        usloss/testcases/test04.c
        usloss/testcases/test05.c
        usloss/testcases/test06.c
        usloss/testcases/test07.c
        usloss/testcases/test08.c
        usloss/testcases/test09.c
        usloss/testcases/test10.c
        usloss/testcases/test11.c
        usloss/testcases/test12.c
        usloss/testcases/test13.c
        usloss/testcases/test14.c
        usloss/testcases/test15.c
        usloss/testcases/test16.c
        usloss/testcases/test17.c
        usloss/testcases/test18.c
        usloss/testcases/test19.c
        usloss/testcases/test20.c
        usloss/testcases/test21.c
        usloss/testcases/test22.c
        usloss/testcases/test23.c
        usloss/testcases/test24.c
        usloss/testcases/test25.c
        usloss/testcases/test26.c
        usloss/testcases/test27.c
        usloss/testcases/test28.c
        usloss/testcases/test29.c
        usloss/testcases/test30.c
        usloss/testcases/test31.c
        usloss/testcases/test32.c
        usloss/testcases/test33.c
        usloss/testcases/test34.c
        usloss/testcases/test35.c
        usloss/testcases/test36.c
        usloss/config.h
        usloss/kernel.h
        usloss/linkedList.c
        usloss/Makefile
        usloss/Makefile.in
        usloss/p1.c
        usloss/phase1.c
        usloss/phase1.h
        usloss/usloss.h
        README.md
        usloss-v1.0.pdf)

add_executable(linkedList usloss/linkedList.c)