cmake_minimum_required(VERSION 3.9)
project(usloss)

set(CMAKE_CXX_STANDARD 11)

add_executable(usloss
        libdisk/disk.c
        libdisk/disk.o
        libdisk/libdisk.h
        libdisk/libdisk3.6.a
        libdisk/makedisk
        libdisk/makedisk.c
        libdisk/makedisk.o
        libdisk/Makefile
        libdisk/Makefile.in
        libuser/libuser.c
        libuser/libuser.h
        libuser/libuser.o
        libuser/libuser3.6.a
        libuser/Makefile
        libuser/Makefile.in
        phase1/testcases/test00.c
        phase1/testcases/test01.c
        phase1/testcases/test02.c
        phase1/testcases/test03.c
        phase1/testcases/test04.c
        phase1/testcases/test05.c
        phase1/testcases/test06.c
        phase1/testcases/test07.c
        phase1/testcases/test08.c
        phase1/testcases/test09.c
        phase1/testcases/test10.c
        phase1/testcases/test11.c
        phase1/testcases/test12.c
        phase1/testcases/test13.c
        phase1/testcases/test14.c
        phase1/testcases/test15.c
        phase1/testcases/test16.c
        phase1/testcases/test17.c
        phase1/testcases/test18.c
        phase1/testcases/test19.c
        phase1/testcases/test20.c
        phase1/testcases/test21.c
        phase1/testcases/test22.c
        phase1/testcases/test23.c
        phase1/testcases/test24.c
        phase1/testcases/test25.c
        phase1/testcases/test26.c
        phase1/testcases/test27.c
        phase1/testcases/test28.c
        phase1/testcases/test29.c
        phase1/testcases/test30.c
        phase1/testcases/test31.c
        phase1/testcases/test32.c
        phase1/testcases/test33.c
        phase1/testcases/test34.c
        phase1/testcases/test35.c
        phase1/testcases/test36.c
        phase1/testResults/test00.txt
        phase1/testResults/test01.txt
        phase1/testResults/test02.txt
        phase1/testResults/test03.txt
        phase1/testResults/test04.txt
        phase1/testResults/test05.txt
        phase1/testResults/test06.txt
        phase1/testResults/test07.txt
        phase1/testResults/test08.txt
        phase1/testResults/test09.txt
        phase1/testResults/test10.txt
        phase1/testResults/test11.txt
        phase1/testResults/test12.txt
        phase1/testResults/test13.txt
        phase1/testResults/test14.txt
        phase1/testResults/test15.txt
        phase1/testResults/test16.txt
        phase1/testResults/test17.txt
        phase1/testResults/test18.txt
        phase1/testResults/test19.txt
        phase1/testResults/test20.txt
        phase1/testResults/test21.txt
        phase1/testResults/test22.txt
        phase1/testResults/test23.txt
        phase1/testResults/test24.txt
        phase1/testResults/test25.txt
        phase1/testResults/test26.txt
        phase1/testResults/test27.txt
        phase1/testResults/test28.txt
        phase1/testResults/test29.txt
        phase1/testResults/test30.txt
        phase1/testResults/test31.txt
        phase1/testResults/test32.txt
        phase1/testResults/test33.txt
        phase1/testResults/test34.txt
        phase1/testResults/test35.txt
        phase1/testResults/test36.txt
        phase1/kernel.h
        phase1/libphase1.a
        phase1/Makefile
        phase1/p1.c
        phase1/p1.o
        phase1/phase1.c
        phase1/phase1.h
        phase1/phase1.o
        phase1/queue.c
        phase1/skeleton.c
        phase1/test01.o
        pterm/Makefile
        pterm/Makefile.in
        pterm/pterm
        pterm/pterm.c
        pterm/pterm.o
        src/dev_alarm.c
        src/dev_alarm.h
        src/dev_alarm.o
        src/dev_clock.c
        src/dev_clock.h
        src/dev_clock.o
        src/dev_disk.c
        src/dev_disk.h
        src/dev_disk.o
        src/dev_term.c
        src/dev_term.h
        src/dev_term.o
        src/devices.c
        src/devices.h
        src/devices.o
        src/globals.c
        src/globals.h
        src/globals.o
        src/libusloss3.6.a
        src/main.c
        src/main.h
        src/main.o
        src/Makefile
        src/Makefile.in
        src/mmu.c
        src/mmu.o
        src/mmuInt.h
        src/project.h
        src/sig_ints.c
        src/sig_ints.h
        src/sig_ints.o
        src/syscall.h
        src/test.py
        src/usloss.h
        src/usyscall.h
        config.h)
