cmake_minimum_required(VERSION 3.9)
project(usloss)

set(CMAKE_CXX_STANDARD 11)

add_executable(usloss
        libdisk/disk.c
        libdisk/libdisk.h
        libdisk/makedisk.c
        libuser/libuser.c
        libuser/libuser.h
        phase1/testcases/test00.c
        phase1/testcases/test01.c
        phase1/testcases/test02.c
        phase1/testcases/test03.c
        phase1/testcases/test04.c
        phase1/testcases/test05.c
        phase1/testcases/test06.c
        phase1/testcases/test07.c
        phase1/testcases/test08.c
        phase1/testcases/test09.c
        phase1/testcases/test10.c
        phase1/testcases/test11.c
        phase1/testcases/test12.c
        phase1/testcases/test13.c
        phase1/testcases/test14.c
        phase1/testcases/test15.c
        phase1/testcases/test16.c
        phase1/testcases/test17.c
        phase1/testcases/test18.c
        phase1/testcases/test19.c
        phase1/testcases/test20.c
        phase1/testcases/test21.c
        phase1/testcases/test22.c
        phase1/testcases/test23.c
        phase1/testcases/test24.c
        phase1/testcases/test25.c
        phase1/testcases/test26.c
        phase1/testcases/test27.c
        phase1/testcases/test28.c
        phase1/testcases/test29.c
        phase1/testcases/test30.c
        phase1/testcases/test31.c
        phase1/testcases/test32.c
        phase1/testcases/test33.c
        phase1/testcases/test34.c
        phase1/testcases/test35.c
        phase1/testcases/test36.c
        phase1/kernel.h
        phase1/p1.c
        phase1/phase1.c
        phase1/phase1.h
        phase1/usloss.h
        phase2
        phase3
        pterm/pterm.c
        src/dev_alarm.c
        src/dev_alarm.h
        src/dev_clock.c
        src/dev_clock.h
        src/dev_disk.c
        src/dev_disk.h
        src/dev_term.c
        src/dev_term.h
        src/devices.c
        src/devices.h
        src/globals.c
        src/globals.h
        src/main.c
        src/main.h
        src/mmu.c
        src/mmuInt.h
        src/project.h
        src/sig_ints.c
        src/sig_ints.h
        src/syscall.h
        src/usloss.h
        src/usyscall.h
        config.h)
